# demo_simple_py

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline_ci.yml
config/: config.yml
data/input/: products_uuid.csv  sales_uuid.csv  stores_uuid.csv
src/: extract.py  main.py  utils.py
src/etl/: __init__.py  extract.py  utils.py
test/: test.py  test_extract.py
