[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-project"
version = "0.1.0"
description = "ETL in PySpark"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Eva González Marcote" }
]
dependencies = [
  "pyspark==3.5.1",
  "pytest>=7.0.0",
  "chispa>=0.9.2",
  "pandas",
  "pyyaml"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Ruff configuration
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E203"]  # Remove W503 because it doesn't exist in Ruff
exclude = [
  "src/etl_project.egg-info",
  "build",
  "dist",
  ".venv",
  "env"
]
